bin_PROGRAMS = @top_srcdir@/bin/circle
INCLUDES = -I@top_srcdir@/src/include @PQINCPATH@ @XML_CPPFLAGS@
AM_CXXFLAGS = -Wall -Wcast-qual
AM_LDFLAGS = @XML_LIBS@
@top_srcdir@_bin_circle_SOURCES = \
				 clan/clan.cc \
				 classes/act.barb.cc \
                 classes/act.cleric.cc \
                 classes/act.bard.cc \
                 classes/act.cyborg.cc \
                 classes/act.hood.cc \
                 classes/act.knight.cc \
                 classes/act.mage.cc \
                 classes/act.merc.cc \
                 classes/act.monk.cc \
                 classes/act.physic.cc \
                 classes/act.psionic.cc \
                 classes/act.ranger.cc \
                 classes/act.thief.cc \
                 classes/char_class.cc \
                 combat/act.offensive.cc \
                 combat/combat_messages.cc \
                 combat/combat_utils.cc \
                 combat/fight.cc \
                 db/account.cc \
                 db/obj_matcher.cc \
                 db/analysis.cc \
                 db/constants.cc \
                 db/db.cc \
                 db/objsave.cc \
                 db/xml.cc \
                 dyntext/dyntext.cc \
                 editor/boardeditor.cc \
                 editor/fileeditor.cc \
                 editor/editor.cc \
                 editor/maileditor.cc \
                 editor/polleditor.cc \
                 editor/progeditor.cc \
                 editor/texteditor.cc \
                 flow_room/flow_room.cc \
                 help/help_item.cc \
                 help/help_collection.cc \
                 house/house.cc \
                 include/account.h \
                 include/Mapper.h \
                 include/actions.h \
                 include/accstr.h \
                 include/char_class.h \
                 include/ban.h \
                 include/boards.h \
                 include/bomb.h \
                 include/constants.h \
                 include/clan.h \
                 include/comm.h \
                 include/creature.h \
                 include/combat_data_list.h \
                 include/defs.h \
                 include/db.h \
                 include/creature_list.h \
                 include/hell_hunter_spec.h \
                 include/desc_data.h \
                 include/dmalloc.h \
                 include/editor.h \
                 include/fight.h \
                 include/flags.h \
                 include/flow_room.h \
                 include/guns.h \
                 include/handler.h \
                 include/interpreter.h \
                 include/help.h \
                 include/house.h \
                 include/obj_matcher.h \
                 include/language.h \
                 include/login.h \
                 include/macros.h \
                 include/mail.h \
                 include/materials.h \
                 include/mobact.h \
                 include/mobile_map.h \
                 include/obj_data.h \
                 include/player_table.h \
                 include/object_map.h \
                 include/olc.h \
                 include/paths.h \
                 include/remorter.h \
                 include/prog.h \
                 include/quest.h \
                 include/room_data.h \
                 include/rpl_resp.h \
                 include/safe_list.h \
                 include/screen.h \
                 include/search.h \
                 include/security.h \
                 include/smokes.h \
                 include/specs.h \
                 include/spells.h \
                 include/structs.h \
                 include/tmpstr.h \
                 include/tokenizer.h \
                 include/utils.h \
                 include/vehicle.h \
                 include/vendor.h \
                 include/weather.h \
                 include/xml_utils.h \
                 include/zone_data.h \
                 interpreter/interpreter.cc \
                 interpreter/group.cc \
                 interpreter/security.cc \
                 magic/magic.cc \
                 magic/spell_parser.cc \
                 magic/spells.cc \
                 map/Mapper.cc \
                 misc/act.comm.cc \
                 misc/act.informative.cc \
                 misc/act.movement.cc \
                 misc/act.obj.cc \
                 misc/act.other.cc \
                 misc/act.wizard.cc \
                 misc/config.cc \
                 misc/limits.cc \
                 misc/login.cc \
                 mobiles/artisan.cc \
                 mobiles/cityguard.cc \
                 mobiles/guard.cc \
                 mobiles/mail.cc \
                 mobiles/mobact.cc \
                 mobiles/vendor.cc \
                 net/gnetsys.cc \
                 net/ban.cc \
                 net/comm.cc \
                 net/nanny.cc \
                 objects/boards.cc \
                 objects/smokes.cc \
                 objects/bomb.cc \
                 objects/guns.cc \
                 objects/paths.cc \
                 objects/vehicle.cc \
                 olc/olc_mob.cc \
                 olc/olc.cc \
                 olc/olc_obj.cc \
                 olc/olc_srch.cc \
                 olc/olc_wld.cc \
                 olc/olc_zon.cc \
                 quest/quest.cc \
                 search/prog_compile.cc \
                 search/prog.cc \
                 search/search.cc \
                 social/act.social.cc \
                 social/language.cc \
                 specials/Specs/araken_specs/rust_monster.spec \
                 specials/Specs/atlas_specs/align_fountains.spec \
                 specials/Specs/bugs_specs/monastery_eating.spec \
                 specials/Specs/bugs_specs/red_highlord.spec \
                 specials/Specs/city_specs/free_bricks.spec \
                 specials/Specs/cj_specs/underworld_goddess.spec \
                 specials/Specs/cj_specs/beer_tree.spec \
                 specials/Specs/cj_specs/black_rose.spec \
                 specials/Specs/cj_specs/podium.spec \
                 specials/Specs/disaster_specs/boulder_thrower.spec \
                 specials/Specs/disaster_specs/windy_room.spec \
                 specials/Specs/electro_specs/electronics_school.spec \
                 specials/Specs/electro_specs/credit_exchange.spec \
                 specials/Specs/electro_specs/cyber_cock.spec \
                 specials/Specs/electro_specs/cyborg_overhaul.spec \
                 specials/Specs/electro_specs/electrician.spec \
                 specials/Specs/electro_specs/unspecializer.spec \
                 specials/Specs/electro_specs/implanter.spec \
                 specials/Specs/electro_specs/lawyer.spec \
                 specials/Specs/electro_specs/mugger.spec \
                 specials/Specs/electro_specs/paramedic.spec \
                 specials/Specs/electro_specs/sunstation.spec \
                 specials/Specs/electro_specs/vr_arcade_game.spec \
                 specials/Specs/fishbone_specs/keymaster.spec \
                 specials/Specs/giants_specs/javelin_of_lightning.spec \
                 specials/Specs/giants_specs/carrion_crawler.spec \
                 specials/Specs/giants_specs/insane_merchant.spec \
                 specials/Specs/giants_specs/kata.spec \
                 specials/Specs/giants_specs/ogre1.spec \
                 specials/Specs/heaven/high_priestess.spec \
                 specials/Specs/heaven/archon.spec \
                 specials/Specs/hell_specs/abandoned_cavern.spec \
                 specials/Specs/hell_specs/bearded_devil.spec \
                 specials/Specs/hell_specs/baalzebul.spec \
                 specials/Specs/hell_specs/malagard_lightning_room.spec \
                 specials/Specs/hell_specs/cloak_of_deception.spec \
                 specials/Specs/hell_specs/cremator.spec \
                 specials/Specs/hell_specs/cyberfiend.spec \
                 specials/Specs/hell_specs/dangerous_climb.spec \
                 specials/Specs/hell_specs/geryon.spec \
                 specials/Specs/hell_specs/hell_domed_chamber.spec \
                 specials/Specs/hell_specs/hell_hound.spec \
                 specials/Specs/hell_specs/horn_of_geryon.spec \
                 specials/Specs/hell_specs/killzone_room.spec \
                 specials/Specs/hell_specs/maladomini_jailer.spec \
                 specials/Specs/hell_specs/stygian_lightning_rm.spec \
                 specials/Specs/hell_specs/malbolge_bridge.spec \
                 specials/Specs/hell_specs/moloch.spec \
                 specials/Specs/hell_specs/pit_keeper.spec \
                 specials/Specs/hell_specs/regulator.spec \
                 specials/Specs/hell_specs/ressurector.spec \
                 specials/Specs/hell_specs/unholy_compact.spec \
                 specials/Specs/hell_specs/tiamat.spec \
                 specials/Specs/javelin_specs/clone_lab.spec \
                 specials/Specs/labyrinth/laby_carousel.spec \
                 specials/Specs/labyrinth/laby_altar.spec \
                 specials/Specs/labyrinth/laby_portal.spec \
                 specials/Specs/mobile_specs/christmas_quest.spec \
                 specials/Specs/mobile_specs/astral_deva.spec \
                 specials/Specs/mobile_specs/auctioneer.spec \
                 specials/Specs/mobile_specs/aziz.spec \
                 specials/Specs/mobile_specs/basher.spec \
                 specials/Specs/mobile_specs/energy_drainer.spec \
                 specials/Specs/mobile_specs/courier_imp.spec \
                 specials/Specs/mobile_specs/duke_nukem.spec \
                 specials/Specs/mobile_specs/fire_breather.spec \
                 specials/Specs/mobile_specs/fates.spec \
                 specials/Specs/mobile_specs/healing_ranger.spec \
                 specials/Specs/mobile_specs/grandmaster.spec \
                 specials/Specs/mobile_specs/languagemaster.spec \
                 specials/Specs/mobile_specs/juju_zombie.spec \
                 specials/Specs/mobile_specs/junker.spec \
                 specials/Specs/mobile_specs/phantasmic_sword.spec \
                 specials/Specs/mobile_specs/mage_teleporter.spec \
                 specials/Specs/mobile_specs/medusa.spec \
                 specials/Specs/mobile_specs/mob_helper.spec \
                 specials/Specs/mobile_specs/oedit_reloader.spec \
                 specials/Specs/mobile_specs/underwater_predator.spec \
                 specials/Specs/mobile_specs/script_reader.spec \
                 specials/Specs/mobile_specs/spinal.spec \
                 specials/Specs/mobile_specs/tarrasque.spec \
                 specials/Specs/mobile_specs/town_crier.spec \
                 specials/Specs/mobile_specs/unholy_stalker.spec \
                 specials/Specs/mobile_specs/watchdog.spec \
                 specials/Specs/mobile_specs/weaponsmaster.spec \
                 specials/Specs/modrian_specs/entrance_to_brawling.spec \
                 specials/Specs/modrian_specs/cemetary_ghoul.spec \
                 specials/Specs/modrian_specs/chest_mimic.spec \
                 specials/Specs/modrian_specs/circus_clown.spec \
                 specials/Specs/modrian_specs/cock_fight.spec \
                 specials/Specs/modrian_specs/modrian_fountain_obj.spec \
                 specials/Specs/modrian_specs/entrance_to_cocks.spec \
                 specials/Specs/modrian_specs/modrian_fountain_rm.spec \
                 specials/Specs/modrian_specs/mystical_enclave_rm.spec \
                 specials/Specs/modrian_specs/ornery_goat.spec \
                 specials/Specs/modrian_specs/rat_mama.spec \
                 specials/Specs/modrian_specs/safiir.spec \
                 specials/Specs/modrian_specs/shimmering_portal.spec \
                 specials/Specs/modrian_specs/temple_healer.spec \
                 specials/Specs/modrian_specs/unholy_square.spec \
                 specials/Specs/modrian_specs/wagon_driver.spec \
                 specials/Specs/modrian_specs/wagon_obj.spec \
                 specials/Specs/modrian_specs/wagon_room.spec \
                 specials/Specs/newbie_specs/newbie_gold_coupler.spec \
                 specials/Specs/newbie_specs/guardian_angel.spec \
                 specials/Specs/newbie_specs/newbie_cafe_rm.spec \
                 specials/Specs/newbie_specs/newbie_fly.spec \
                 specials/Specs/newbie_specs/newbie_fodder.spec \
                 specials/Specs/newbie_specs/newbie_portal_rm.spec \
                 specials/Specs/newbie_specs/newbie_healer.spec \
                 specials/Specs/newbie_specs/newbie_improve.spec \
                 specials/Specs/newbie_specs/newbie_stairs_rm.spec \
                 specials/Specs/newbie_specs/newbie_tower_rm.spec \
                 specials/Specs/object_specs/ancient_artifact.spec \
                 specials/Specs/object_specs/finger_of_death.spec \
                 specials/Specs/object_specs/loudspeaker.spec \
                 specials/Specs/object_specs/quest_sphere.spec \
                 specials/Specs/object_specs/voting_booth.spec \
                 specials/Specs/out_specs/spirit_priestess.spec \
                 specials/Specs/out_specs/taunting_frenchman.spec \
                 specials/Specs/rad_specs/labyrinth.spec \
                 specials/Specs/sarflin_specs/dwarven_hermit.spec \
                 specials/Specs/sarflin_specs/arena.spec \
                 specials/Specs/sarflin_specs/darom.spec \
                 specials/Specs/sarflin_specs/fountain_restore.spec \
                 specials/Specs/sarflin_specs/fountain_heal.spec \
                 specials/Specs/sarflin_specs/gingwatzim_rm.spec \
                 specials/Specs/sarflin_specs/gingwatzim_room.spec \
                 specials/Specs/sarflin_specs/gunnery_device.spec \
                 specials/Specs/sarflin_specs/library.spec \
                 specials/Specs/sarflin_specs/maze_cleaner.spec \
                 specials/Specs/sarflin_specs/maze_switcher.spec \
                 specials/Specs/sarflin_specs/oracle.spec \
                 specials/Specs/sarflin_specs/puppet.spec \
                 specials/Specs/sarflin_specs/ramp_leaver.spec \
                 specials/Specs/sarflin_specs/vault_door.spec \
                 specials/Specs/sarflin_specs/vein.spec \
                 specials/Specs/skullport_specs/corpse_griller.spec \
                 specials/Specs/skullport_specs/fountain_youth.spec \
                 specials/Specs/skullport_specs/head_shrinker.spec \
                 specials/Specs/skullport_specs/multi_healer.spec \
                 specials/Specs/skullport_specs/slaver.spec \
                 specials/Specs/smitty_specs/battlefield_ghost.spec \
                 specials/Specs/smitty_specs/aziz_canon.spec \
                 specials/Specs/smitty_specs/djinn_lamp.spec \
                 specials/Specs/smitty_specs/nude_guard.spec \
                 specials/Specs/utility_specs/corpse_retrieval.spec \
                 specials/Specs/utility_specs/astral_portal.spec \
                 specials/Specs/utility_specs/bounty_clerk.spec \
                 specials/Specs/utility_specs/communicator.spec \
                 specials/Specs/utility_specs/life_point_potion.spec \
                 specials/Specs/utility_specs/donation_room.spec \
                 specials/Specs/utility_specs/dt_cleaner.spec \
                 specials/Specs/utility_specs/elven_registry.spec \
                 specials/Specs/utility_specs/enhancer.spec \
                 specials/Specs/utility_specs/fate_cauldron.spec \
                 specials/Specs/utility_specs/fate_portal.spec \
                 specials/Specs/utility_specs/gen_locker.spec \
                 specials/Specs/utility_specs/gen_shower_rm.spec \
                 specials/Specs/utility_specs/improve_stats.spec \
                 specials/Specs/utility_specs/increaser.spec \
                 specials/Specs/utility_specs/jail_locker.spec \
                 specials/Specs/utility_specs/killer_hunter.spec \
                 specials/Specs/utility_specs/nohunger_dude.spec \
                 specials/Specs/utility_specs/magic_books.spec \
                 specials/Specs/utility_specs/newspaper.spec \
                 specials/Specs/utility_specs/quantum_rift.spec \
                 specials/Specs/utility_specs/old_reimb.spec \
                 specials/Specs/utility_specs/portal_home.spec \
                 specials/Specs/utility_specs/prac_manual.spec \
                 specials/Specs/utility_specs/roaming_portal.spec \
                 specials/Specs/utility_specs/registry.spec \
                 specials/Specs/utility_specs/reimb.spec \
                 specials/Specs/utility_specs/reinforcer.spec \
                 specials/Specs/utility_specs/repairer.spec \
                 specials/Specs/utility_specs/testmud_controller.spec \
                 specials/Specs/utility_specs/shade_zone.spec \
                 specials/Specs/utility_specs/stable_room.spec \
                 specials/Specs/utility_specs/telescope.spec \
                 specials/Specs/utility_specs/tester_util.spec \
                 specials/Specs/utility_specs/typo_util.spec \
                 specials/Specs/falling_tower_dt.spec \
                 specials/Specs/stepping_stone.spec \
                 specials/demonic_guard.cc \
                 specials/remorter.cc \
                 specials/duke.cc \
                 specials/hell_hunter_spec.cc \
                 specials/spec_assign.cc \
                 specials/spec_procs.cc \
                 specials/styx.cc \
                 structs/creature.cc \
                 structs/creature_io.cc \
                 structs/creature_list.cc \
                 structs/mobile_map.cc \
                 structs/obj_data.cc \
                 structs/object_map.cc \
                 structs/player_table.cc \
                 structs/room_data.cc \
                 util/accstr.cc \
                 util/handler.cc \
                 util/graph.cc \
                 util/modify.cc \
                 util/random.cc \
                 util/sight.cc \
                 util/tmpstr.cc \
                 util/utils.cc \
                 weather/weather.cc
