bin_PROGRAMS = @top_srcdir@/bin/circle
INCLUDES = -I@top_srcdir@/src/include @PQINCPATH@
AM_CFLAGS = -Wall -Wcast-qual @XML_CFLAGS@ @GLIB_CFLAGS@
AM_LDFLAGS = @XML_LIBS@ @GLIB_LIBS@
ETAGSFLAGS = -r '/^ASPELL(\\([a-zA-Z0-9_]+\\))$/\\1/' -r '/^ACMD(\\([a-zA-Z0-9_]+\\))$/\\1/' -r '/^DEFPROGHANDLER(\\([a-zA-Z0-9_]+\\),[^)]+)$/prog_do_\\1/' -r '/^SPECIAL(\\([a-zA-Z0-9_]+\\))$/\\1/'
@top_srcdir@_bin_circle_SOURCES = \
				 clan/clan.c \
				 classes/act.barb.c \
                 classes/act.cleric.c \
                 classes/act.bard.c \
                 classes/act.cyborg.c \
                 classes/act.hood.c \
                 classes/act.knight.c \
                 classes/act.mage.c \
                 classes/act.merc.c \
                 classes/act.monk.c \
                 classes/act.physic.c \
                 classes/act.psionic.c \
                 classes/act.ranger.c \
                 classes/act.thief.c \
                 classes/char_class.c \
                 combat/act.offensive.c \
                 combat/combat_messages.c \
                 combat/combat_utils.c \
                 combat/fight.c \
                 combat/pvp.c \
                 db/account.c \
                 db/obj_matcher.c \
                 db/analysis.c \
                 db/constants.c \
                 db/db.c \
                 db/objsave.c \
                 db/xml.c \
                 dyntext/dyntext.c \
                 editor/boardeditor.c \
                 editor/fileeditor.c \
                 editor/editor.c \
                 editor/maileditor.c \
                 editor/polleditor.c \
                 editor/progeditor.c \
                 editor/texteditor.c \
                 flow_room/flow_room.c \
                 help/help_item.c \
                 help/help_collection.c \
                 house/house.c \
                 interpreter/interpreter.c \
                 interpreter/role.c \
                 interpreter/security.c \
                 magic/magic.c \
                 magic/spell_parser.c \
                 magic/spells.c \
                 misc/act.comm.c \
                 misc/act.informative.c \
                 misc/act.movement.c \
                 misc/act.obj.c \
                 misc/act.other.c \
                 misc/act.wizard.c \
                 misc/config.c \
                 misc/limits.c \
                 misc/login.c \
                 mobiles/artisan.c \
                 mobiles/cityguard.c \
                 mobiles/guard.c \
                 mobiles/mail.c \
                 mobiles/mobact.c \
                 mobiles/tattooist.c \
                 mobiles/vendor.c \
                 mobiles/voice.c \
                 net/gnetsys.c \
                 net/ban.c \
                 net/comm.c \
                 net/nanny.c \
                 objects/boards.c \
                 objects/smokes.c \
                 objects/bomb.c \
                 objects/guns.c \
                 objects/paths.c \
                 objects/vehicle.c \
                 olc/olc_mob.c \
                 olc/olc.c \
                 olc/olc_obj.c \
                 olc/olc_srch.c \
                 olc/olc_wld.c \
                 olc/olc_zon.c \
                 quest/quest.c \
                 search/prog_compile.c \
                 search/prog.c \
                 search/search.c \
                 social/act.social.c \
                 social/language.c \
                 specials/demonic_guard.c \
                 specials/remorter.c \
                 specials/duke.c \
                 specials/hell_hunter_spec.c \
                 specials/spec_assign.c \
                 specials/spec_procs.c \
                 specials/styx.c \
                 structs/creature.c \
                 structs/creature_io.c \
                 structs/creature_list.c \
                 structs/mobile_map.c \
                 structs/obj_data.c \
                 structs/object_map.c \
                 structs/player_table.c \
                 structs/room_data.c \
                 util/accstr.c \
                 util/handler.c \
                 util/graph.c \
                 util/modify.c \
                 util/random.c \
                 util/sight.c \
                 util/tmpstr.c \
                 util/utils.c \
                 weather/weather.c \
                 specials/Specs/araken_specs/rust_monster.c \
                 specials/Specs/atlas_specs/align_fountains.c \
                 specials/Specs/bugs_specs/monastery_eating.c \
                 specials/Specs/bugs_specs/red_highlord.c \
                 specials/Specs/city_specs/free_bricks.c \
                 specials/Specs/cj_specs/underworld_goddess.c \
                 specials/Specs/cj_specs/beer_tree.c \
                 specials/Specs/cj_specs/black_rose.c \
                 specials/Specs/cj_specs/podium.c \
                 specials/Specs/disaster_specs/boulder_thrower.c \
                 specials/Specs/disaster_specs/windy_room.c \
                 specials/Specs/electro_specs/electronics_school.c \
                 specials/Specs/electro_specs/credit_exchange.c \
                 specials/Specs/electro_specs/cyber_cock.c \
                 specials/Specs/electro_specs/cyborg_overhaul.c \
                 specials/Specs/electro_specs/electrician.c \
                 specials/Specs/electro_specs/unspecializer.c \
                 specials/Specs/electro_specs/implanter.c \
                 specials/Specs/electro_specs/lawyer.c \
                 specials/Specs/electro_specs/mugger.c \
                 specials/Specs/electro_specs/paramedic.c \
                 specials/Specs/electro_specs/sunstation.c \
                 specials/Specs/electro_specs/vr_arcade_game.c \
                 specials/Specs/fishbone_specs/keymaster.c \
                 specials/Specs/giants_specs/javelin_of_lightning.c \
                 specials/Specs/giants_specs/carrion_crawler.c \
                 specials/Specs/giants_specs/insane_merchant.c \
                 specials/Specs/giants_specs/kata.c \
                 specials/Specs/giants_specs/ogre1.c \
                 specials/Specs/heaven/high_priestess.c \
                 specials/Specs/heaven/archon.c \
                 specials/Specs/hell_specs/abandoned_cavern.c \
                 specials/Specs/hell_specs/bearded_devil.c \
                 specials/Specs/hell_specs/baalzebul.c \
                 specials/Specs/hell_specs/malagard_lightning_room.c \
                 specials/Specs/hell_specs/cloak_of_deception.c \
                 specials/Specs/hell_specs/cremator.c \
                 specials/Specs/hell_specs/cyberfiend.c \
                 specials/Specs/hell_specs/dangerous_climb.c \
                 specials/Specs/hell_specs/geryon.c \
                 specials/Specs/hell_specs/hell_domed_chamber.c \
                 specials/Specs/hell_specs/hell_hound.c \
                 specials/Specs/hell_specs/horn_of_geryon.c \
                 specials/Specs/hell_specs/killzone_room.c \
                 specials/Specs/hell_specs/maladomini_jailer.c \
                 specials/Specs/hell_specs/stygian_lightning_rm.c \
                 specials/Specs/hell_specs/malbolge_bridge.c \
                 specials/Specs/hell_specs/moloch.c \
                 specials/Specs/hell_specs/pit_keeper.c \
                 specials/Specs/hell_specs/regulator.c \
                 specials/Specs/hell_specs/ressurector.c \
                 specials/Specs/hell_specs/unholy_compact.c \
                 specials/Specs/hell_specs/tiamat.c \
                 specials/Specs/javelin_specs/clone_lab.c \
                 specials/Specs/labyrinth/laby_carousel.c \
                 specials/Specs/labyrinth/laby_altar.c \
                 specials/Specs/labyrinth/laby_portal.c \
                 specials/Specs/mobile_specs/christmas_quest.c \
                 specials/Specs/mobile_specs/astral_deva.c \
                 specials/Specs/mobile_specs/auctioneer.c \
                 specials/Specs/mobile_specs/aziz.c \
                 specials/Specs/mobile_specs/basher.c \
                 specials/Specs/mobile_specs/energy_drainer.c \
                 specials/Specs/mobile_specs/courier_imp.c \
                 specials/Specs/mobile_specs/duke_nukem.c \
                 specials/Specs/mobile_specs/fire_breather.c \
                 specials/Specs/mobile_specs/fates.c \
                 specials/Specs/mobile_specs/healing_ranger.c \
                 specials/Specs/mobile_specs/grandmaster.c \
                 specials/Specs/mobile_specs/languagemaster.c \
                 specials/Specs/mobile_specs/juju_zombie.c \
                 specials/Specs/mobile_specs/junker.c \
                 specials/Specs/mobile_specs/phantasmic_sword.c \
                 specials/Specs/mobile_specs/mage_teleporter.c \
                 specials/Specs/mobile_specs/medusa.c \
                 specials/Specs/mobile_specs/mob_helper.c \
                 specials/Specs/mobile_specs/oedit_reloader.c \
                 specials/Specs/mobile_specs/underwater_predator.c \
                 specials/Specs/mobile_specs/spinal.c \
                 specials/Specs/mobile_specs/tarrasque.c \
                 specials/Specs/mobile_specs/town_crier.c \
                 specials/Specs/mobile_specs/unholy_stalker.c \
                 specials/Specs/mobile_specs/watchdog.c \
                 specials/Specs/mobile_specs/weaponsmaster.c \
                 specials/Specs/modrian_specs/entrance_to_brawling.c \
                 specials/Specs/modrian_specs/cemetary_ghoul.c \
                 specials/Specs/modrian_specs/chest_mimic.c \
                 specials/Specs/modrian_specs/circus_clown.c \
                 specials/Specs/modrian_specs/cock_fight.c \
                 specials/Specs/modrian_specs/modrian_fountain_obj.c \
                 specials/Specs/modrian_specs/entrance_to_cocks.c \
                 specials/Specs/modrian_specs/modrian_fountain_rm.c \
                 specials/Specs/modrian_specs/mystical_enclave_rm.c \
                 specials/Specs/modrian_specs/ornery_goat.c \
                 specials/Specs/modrian_specs/rat_mama.c \
                 specials/Specs/modrian_specs/safiir.c \
                 specials/Specs/modrian_specs/shimmering_portal.c \
                 specials/Specs/modrian_specs/temple_healer.c \
                 specials/Specs/modrian_specs/unholy_square.c \
                 specials/Specs/modrian_specs/wagon_driver.c \
                 specials/Specs/modrian_specs/wagon_obj.c \
                 specials/Specs/modrian_specs/wagon_room.c \
                 specials/Specs/newbie_specs/newbie_gold_coupler.c \
                 specials/Specs/newbie_specs/guardian_angel.c \
                 specials/Specs/newbie_specs/newbie_cafe_rm.c \
                 specials/Specs/newbie_specs/newbie_fly.c \
                 specials/Specs/newbie_specs/newbie_fodder.c \
                 specials/Specs/newbie_specs/newbie_portal_rm.c \
                 specials/Specs/newbie_specs/newbie_healer.c \
                 specials/Specs/newbie_specs/newbie_improve.c \
                 specials/Specs/newbie_specs/newbie_stairs_rm.c \
                 specials/Specs/newbie_specs/newbie_tower_rm.c \
                 specials/Specs/object_specs/ancient_artifact.c \
                 specials/Specs/object_specs/finger_of_death.c \
                 specials/Specs/object_specs/loudspeaker.c \
                 specials/Specs/object_specs/quest_sphere.c \
                 specials/Specs/object_specs/voting_booth.c \
                 specials/Specs/out_specs/spirit_priestess.c \
                 specials/Specs/out_specs/taunting_frenchman.c \
                 specials/Specs/rad_specs/labyrinth.c \
                 specials/Specs/sarflin_specs/dwarven_hermit.c \
                 specials/Specs/sarflin_specs/arena.c \
                 specials/Specs/sarflin_specs/darom.c \
                 specials/Specs/sarflin_specs/fountain_restore.c \
                 specials/Specs/sarflin_specs/fountain_heal.c \
                 specials/Specs/sarflin_specs/gingwatzim_rm.c \
                 specials/Specs/sarflin_specs/gingwatzim_room.c \
                 specials/Specs/sarflin_specs/gunnery_device.c \
                 specials/Specs/sarflin_specs/library.c \
                 specials/Specs/sarflin_specs/maze_cleaner.c \
                 specials/Specs/sarflin_specs/maze_switcher.c \
                 specials/Specs/sarflin_specs/oracle.c \
                 specials/Specs/sarflin_specs/puppet.c \
                 specials/Specs/sarflin_specs/ramp_leaver.c \
                 specials/Specs/sarflin_specs/vault_door.c \
                 specials/Specs/sarflin_specs/vein.c \
                 specials/Specs/skullport_specs/corpse_griller.c \
                 specials/Specs/skullport_specs/fountain_youth.c \
                 specials/Specs/skullport_specs/head_shrinker.c \
                 specials/Specs/skullport_specs/multi_healer.c \
                 specials/Specs/skullport_specs/slaver.c \
                 specials/Specs/smitty_specs/battlefield_ghost.c \
                 specials/Specs/smitty_specs/aziz_canon.c \
                 specials/Specs/smitty_specs/djinn_lamp.c \
                 specials/Specs/smitty_specs/nude_guard.c \
                 specials/Specs/utility_specs/corpse_retrieval.c \
                 specials/Specs/utility_specs/astral_portal.c \
                 specials/Specs/utility_specs/bounty_clerk.c \
                 specials/Specs/utility_specs/communicator.c \
                 specials/Specs/utility_specs/life_point_potion.c \
                 specials/Specs/utility_specs/donation_room.c \
                 specials/Specs/utility_specs/dt_cleaner.c \
                 specials/Specs/utility_specs/elven_registry.c \
                 specials/Specs/utility_specs/enhancer.c \
                 specials/Specs/utility_specs/fate_cauldron.c \
                 specials/Specs/utility_specs/fate_portal.c \
                 specials/Specs/utility_specs/gen_locker.c \
                 specials/Specs/utility_specs/gen_shower_rm.c \
                 specials/Specs/utility_specs/improve_stats.c \
                 specials/Specs/utility_specs/increaser.c \
                 specials/Specs/utility_specs/jail_locker.c \
                 specials/Specs/utility_specs/killer_hunter.c \
                 specials/Specs/utility_specs/nohunger_dude.c \
                 specials/Specs/utility_specs/newspaper.c \
                 specials/Specs/utility_specs/quantum_rift.c \
                 specials/Specs/utility_specs/old_reimb.c \
                 specials/Specs/utility_specs/portal_home.c \
                 specials/Specs/utility_specs/prac_manual.c \
                 specials/Specs/utility_specs/roaming_portal.c \
                 specials/Specs/utility_specs/registry.c \
                 specials/Specs/utility_specs/reimb.c \
                 specials/Specs/utility_specs/reinforcer.c \
                 specials/Specs/utility_specs/repairer.c \
                 specials/Specs/utility_specs/testmud_controller.c \
                 specials/Specs/utility_specs/shade_zone.c \
                 specials/Specs/utility_specs/stable_room.c \
                 specials/Specs/utility_specs/telescope.c \
                 specials/Specs/utility_specs/tester_util.c \
                 specials/Specs/utility_specs/typo_util.c \
                 specials/Specs/falling_tower_dt.c \
                 specials/Specs/stepping_stone.c \
                 include/account.h \
                 include/Mapper.h \
                 include/actions.h \
                 include/accstr.h \
                 include/char_class.h \
                 include/ban.h \
                 include/boards.h \
                 include/bomb.h \
                 include/constants.h \
                 include/clan.h \
                 include/comm.h \
                 include/creature.h \
                 include/combat_data_list.h \
                 include/defs.h \
                 include/db.h \
                 include/creature_list.h \
                 include/hell_hunter_spec.h \
                 include/desc_data.h \
                 include/editor.h \
                 include/fight.h \
                 include/flow_room.h \
                 include/guns.h \
                 include/handler.h \
                 include/interpreter.h \
                 include/help.h \
                 include/house.h \
                 include/obj_matcher.h \
                 include/language.h \
                 include/login.h \
                 include/macros.h \
                 include/mail.h \
                 include/materials.h \
                 include/mobact.h \
                 include/mobile_map.h \
                 include/obj_data.h \
                 include/player_table.h \
                 include/object_map.h \
                 include/olc.h \
                 include/paths.h \
                 include/remorter.h \
                 include/prog.h \
                 include/quest.h \
                 include/room_data.h \
                 include/safe_list.h \
                 include/screen.h \
                 include/search.h \
                 include/security.h \
                 include/smokes.h \
                 include/specs.h \
                 include/spells.h \
                 include/structs.h \
                 include/tmpstr.h \
                 include/tokenizer.h \
                 include/utils.h \
                 include/vehicle.h \
                 include/vendor.h \
                 include/voice.h \
                 include/weather.h \
                 include/xml_utils.h \
                 include/zone_data.h
